--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,8 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<scope>annotationProcessor</scope>
+			<optional>true</optional>
+			<!--scope>annotationProcessor</scope-->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
