update application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=project
+spring.output.ansi.enabled=detect
+#spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+logging.level.web=DEBUG
+#spring.sql.init.mode=always
